# python-sdk

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  ASYNCIO_TEST_COVERAGE.md  ASYNC_WORKER_IMPROVEMENTS.md  CHANGELOG.md  Dockerfile  FIX_PLAN.md  LEASE_EXTENSION.md  METRICS.md  POTENTIAL_PROBLEMS.md  README.md  RELEASE.md  SDK_IMPLEMENTATION_GUIDE.md  SDK_UPDATE_v1.md  V2_API_TASK_CHAINING_DESIGN.md  WORKER_ARCHITECTURE.md  WORKER_CONCURRENCY_DESIGN.md  WORKER_CONFIGURATION.md  WORKER_DESIGN.md  WORKER_DISCOVERY.md  conductor_apps.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  swagger.json  workers.md  workflows.md
.github/: dependabot.yml
.github/workflows/: agent-e2e.yml  harness-image.yml  osv-scanner-scheduled.yml  osv-scanner.yml  pull_request.yml  release-agent-e2e-bundle.yml
aiohttp_client/my_aiohttp_client/: __init__.py  api_client.py  rest.py
docs/: AUTHORIZATION.md  INTEGRATION.md  LEASE_EXTENSION.md  METADATA.md  PROMPT.md  README.md  SCHEDULE.md  SECRET_MANAGEMENT.md  TASK_MANAGEMENT.md  WORKER.md  WORKFLOW.md  WORKFLOW_TESTING.md  api-map.md  authentication-retry-policy.md  compatibility.md  connection-authentication.md  core-quickstart.md  debugging.md  deployment-scaling.md  documentation-parity.md  documentation-standard.md  examples.md  observability.md  reliability.md  schedules-events.md  schema-client.md  security.md  server-setup.md  upgrading.md  workers.md  workflow-lifecycle.md  workflow-message-queue.md  workflow-testing.md  workflows.md
docs/agents/: README.md  advanced.md  api-reference.md  framework-agents.md  getting-started.md  writing-agents.md
docs/authorization/: README.md
docs/configuration/: README.md  proxy.md  ssl-tls.md
docs/design/: AGENT_SDK_PORTING_SPEC.md  LEASE_EXTENSION.md  WORKER_CONCURRENCY_DESIGN.md  WORKER_DESIGN.md  WORKER_DISCOVERY.md  WORKER_SDK_IMPLEMENTATION_GUIDE.md  event_driven_interceptor_system.md  lease-extension.md
docs/development/: README.md  workflow_usage_examples.md
docs/examples/: README.md
docs/metadata/: README.md
docs/schedule/: README.md
docs/testing/: README.md
docs/worker/: README.md  task_options_usage_examples.md
docs/workflow/: README.md
e2e/: conftest.py  report_generator.py  test_suite10_code_execution.py  test_suite11_langgraph.py  test_suite12_termination_gates.py  test_suite13_callbacks.py  test_suite14_stateful_domain.py  test_suite15_skills.py  test_suite1_basic_validation.py  test_suite20_plan_execute.py  test_suite21_scheduling.py  test_suite22_ocg.py  test_suite23_from_instance_and_event_hitl.py  test_suite24_agent_client.py  test_suite25_media_input.py  test_suite26_worker_credentials.py  test_suite2_tool_calling.py  test_suite3_cli_tools.py  test_suite4_mcp_tools.py  test_suite5_http_tools.py  test_suite6_pdf_tools.py  test_suite7_media_tools.py  test_suite8_guardrails.py  test_suite9_handoffs.py
examples/: EXAMPLES_README.md  README.md  VERIFICATION_REPORT.md  agentic_workflow.py  async_worker_example.py  asyncio_workers.py  authorization_journey.py  compare_multiprocessing_vs_asyncio.py  dynamic_workflow.py  event_listener_examples.py  fastapi_worker_service.py  kitchensink.py  lease_extension_example.py  mcp_weather_agent.py  metadata_journey.py  metadata_journey_oss.py  metrics_example.py  metrics_percentile_calculator.py  multi_homed_workers.py  multiprocessing_workers.py  prompt_journey.py  rag_workflow.py  run_examples.sh  schedule_journey.py  shell_worker.py  spawn_safety_probe.py  sync_proxy_example.py  sync_ssl_example.py  task_configure.py  task_context_example.py  task_listener_example.py  task_options_example.py  task_workers.py  test_ai_examples.py  test_workflows.py  untrusted_host.py  worker_configuration_example.py  worker_discovery_example.py  worker_discovery_sync_async_example.py  worker_example.py  (+4 more)
examples/agentic_workflows/: README.md  function_calling_example.py  llm_chat.py  llm_chat_human_in_loop.py  mcp_weather_agent.py  multiagent_chat.py
examples/agents/: 01_basic_agent.py  02_tools.py  02a_simple_tools.py  02b_multi_step_tools.py  02c_tool_retry_config.py  03_structured_output.py  04_http_and_mcp_tools.py  04_mcp_weather.py  05_handoffs.py  06_sequential_pipeline.py  07_parallel_agents.py  08_router_agent.py  09_human_in_the_loop.py  09b_hitl_with_feedback.py  09c_hitl_streaming.py  09d_human_tool.py  100_issue_fixer_agent.py  103_plan_and_compile.py  104_plan_execute_guardrails.py  106_plan_execute_agent_fanout.py  107_pac_mcp_proof.py  108_plan_execute_refs.py  109_plan_execute_replan.py  10_guardrails.py  110_plan_execute_replan_solve.py  111_plan_execute_replan_binsearch.py  112_dowhile_loop_inside_workflow.py  113_aml_sar_investigation_loop.py  114_portfolio_rebalance_loop.py  115_plan_execute_planner_context.py  116_ocg_subagent.py  117_ocg_direct_tools.py  118_adaptive_loop_showcase.py  119_research_report_pae_replan.py  11_streaming.py  120_ocg_memory.py  12_long_running.py  13_hierarchical_agents.py  14_existing_workers.py  15_agent_discussion.py  (+117 more)
examples/async/: async_proxy_example.py  async_ssl_example.py  dynamic_workflow.py  kitchensink.py  shell_worker.py  task_configure.py  task_options_async_example.py  task_worker.py  workflow_ops.py  workflow_status_listner.py
examples/helloworld/: greetings_worker.py  greetings_workflow.py  helloworld.py
examples/orkes/: fork_join_script.py  http_poll.py  multiagent_chat.py  open_ai_chat_gpt.py  open_ai_chat_user_input.py  open_ai_function_example.py  open_ai_helloworld.py  re_run_workflow.json  sync_updates.py  task_status_change_audit.py  vector_db_helloworld.py  wait_for_webhook.py  workflow_rerun.py
examples/user_example/: __init__.py  models.py  user_workers.py
examples/worker_discovery/: __init__.py
harness/: README.md  main.py  simulated_task_worker.py  workflow_governor.py  workflow_status_probe.py
harness/manifests/: README.md  configmap-aws.yaml  configmap-azure.yaml  configmap-gcp.yaml  (+2 more)
scripts/: package-e2e-bundle.sh  run_examples.sh  run_integration_tests.sh  test-package-e2e-bundle.sh
tests/: conftest.py
(+1668 files in other folders)
