[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "conductor-python"
version = "1.1.10"
description = "Python SDK for working with https://github.com/conductor-oss/conductor"
authors = ["Orkes <developers@orkes.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "conductor", from = "./src" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
certifi = ">=14.05.14"
prometheus-client = ">=0.13.1"
six = ">=1.10"
requests = ">=2.31.0"
typing-extensions = ">=4.2.0"
astor = ">=0.8.1"
shortuuid = ">=1.0.11"
dacite = ">=1.8.1"
deprecated = ">=1.2.14"

[tool.poetry.group.dev.dependencies]
pylint = ">=2.17.5"
coverage = ">=7.2.7"
pytest-cov = ">=4.1.0"
ruff = "^0.1.0"

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "B008",
    "C901",
    "W191",
]

line-length = 88
indent-width = 4

target-version = "py39"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"src/conductor/client/http/**/*.py" = ["ALL"]

[tool.ruff.isort]
known-first-party = ["conductor"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
