[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "conductor-python"
version = "1.1.10"
description = "Python SDK for working with https://github.com/conductor-oss/conductor"
authors = ["Orkes <developers@orkes.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "conductor", from = "./src" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
certifi = ">=14.05.14"
prometheus-client = ">=0.13.1"
six = ">=1.10"
requests = ">=2.31.0"
typing-extensions = ">=4.2.0"
astor = ">=0.8.1"
shortuuid = ">=1.0.11"
dacite = ">=1.8.1"
deprecated = ">=1.2.14"

[tool.poetry.group.dev.dependencies]
pylint = ">=2.17.5"
coverage = ">=7.2.7"
pytest-cov = ">=4.1.0"
ruff = "^0.2.0"
pre-commit = "^4.2.0"
setuptools = "^80.9.0"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]
extend-exclude = [
    "tests/",
    "examples/",
    "docs/",
    "*.egg-info",
    "build",
    "dist",
]
fix = false
show-fixes = true

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "PIE",
    "PGH",
    "RUF",
]
ignore = [
    "B008",
    "C901",
    "W191",
    "E501",
    "B011",
]

[tool.ruff.lint.isort]
known-first-party = ["conductor"]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"src/conductor/client/http/**/*.py" = ["ALL"]
"tests/**/*.py" = ["B", "C4", "SIM"]
"examples/**/*.py" = ["B", "C4", "SIM"]
