[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "conductor-python"
version = "0.0.0" # Do not change! Placeholder. Real version injected during build (edited) 
description = "Python SDK for working with https://github.com/conductor-oss/conductor"
authors = ["Orkes <developers@orkes.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "conductor", from = "./src" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
certifi = ">=14.05.14"
prometheus-client = ">=0.13.1"
six = ">=1.10"
requests = ">=2.33.0"
typing-extensions = ">=4.2.0"
astor = ">=0.8.1"
shortuuid = ">=1.0.11"
dacite = ">=1.8.1"
deprecated = ">=1.2.14"
python-dateutil = "^2.8.2"
httpx = {version = ">=0.26.0", extras = ["http2"]}
h2 = ">=4.1.0"
urllib3 = ">=2.6.3"
cloudpickle = ">=2.0"

# Agent framework integrations — optional, activated via [tool.poetry.extras] below.
# Floors raised to the versions Agentspan's own uv.lock proved mutually compatible
# (langchain's 0.3.x-floor collided with today's published 1.x line during resolution).
langchain = { version = ">=1.2.13", optional = true }
langchain-core = { version = ">=1.2.20", optional = true }
langchain-openai = { version = ">=1.1.11", optional = true }
langgraph = { version = ">=1.1.3", optional = true }
google-adk = { version = ">=1.27.1", optional = true }
openai = { version = ">=2.28.0", optional = true }
openai-agents = { version = ">=0.12.2", optional = true }
anthropic = { version = ">=0.91.0", optional = true }
claude-code-sdk = { version = ">=0.0.25", optional = true }

[tool.poetry.extras]
langchain = ["langchain", "langchain-core", "langchain-openai"]
langgraph = ["langgraph", "langchain-core"]
adk = ["google-adk"]
openai = ["openai"]
openai-agents = ["openai-agents"]
anthropic = ["anthropic"]
claude = ["claude-code-sdk"]
agents = ["langchain", "langchain-core", "langchain-openai", "langgraph",
          "google-adk", "openai", "openai-agents", "anthropic", "claude-code-sdk"]

[tool.poetry.group.dev.dependencies]
pylint = ">=2.17.5"
coverage = ">=7.2.7"
pytest-cov = ">=4.1.0"
ruff = "^0.12.0"
pre-commit = "^4.2.0"
setuptools = "^80.9.0"
pytest = "^9.0.3"
pygments = ">=2.20.0"
filelock = ">=3.20.3"
virtualenv = ">=20.36.1"
pytest-asyncio = ">=0.21"
pytest-xdist = ">=3.0"
pytest-rerunfailures = ">=14.0"
mypy = ">=1.10"
jsonschema = ">=4.23"

[tool.poetry.plugins."pytest11"]
conductor-agents-testing = "conductor.ai.agents.testing.pytest_plugin"
agentspan-testing = "conductor.ai.agents.testing.pytest_plugin"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
extend-exclude = [
    "tests/",
    "examples/",
    "docs/",
    "*.egg-info",
    "build",
    "dist",
]
fix = false
show-fixes = true

[tool.ruff.lint]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PL",
  # flake8-pytest-style
  "PT",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # comprehensions
  "C4",
  # pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
  # flake8-bandit: exec-builtin
  "S102",
  # numpy-legacy-random
  "NPY002",
  # Perflint
  "PERF",
  # flynt
  "FLY",
  # flake8-logging-format
  "G",
  # flake8-future-annotations
  "FA",
  # unconventional-import-alias
  "ICN001",
  # flake8-slots
  "SLOT",
  # flake8-raise
  "RSE"
]

ignore = [
    "B008",
    "C901",
    "W191",
    "E501",
    "B011",
    # too-many-arguments
    "PLR0913",
    # collapsible-else-if
    "PLR5501",
    # too-many-branches
    "PLR0912",
    # too-many-return-statements
    "PLR0911",
    # flake8-type-checking (150 errors)
    "TC"
]

[tool.ruff.lint.isort]
known-first-party = ["conductor"]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"src/conductor/client/http/**/*.py" = ["ALL"]
"src/conductor/client/orkes/api/*.py" = ["ALL"]
"tests/**/*.py" = ["B", "C4", "SIM"]
"examples/**/*.py" = ["B", "C4", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: requires a live Agentspan-compatible server",
    "e2e: requires a live server and AGENTSPAN_SERVER_URL",
    "sse: requires SSE streaming (AGENTSPAN_STREAMING_ENABLED=true)",
    "agent_correctness: marks tests as agent correctness tests",
    "semantic: marks tests that use an LLM judge for semantic assertions",
    "slow_sync: long-running sync lease-extension tests (~90s)",
    "slow_async: long-running async lease-extension tests (~90s)",
    "slow_test_all: long-running aggregate workflow-client test_all (~83s)",
    "server_timeout_unreliable: depends on server-side task timeout firing in a bounded window; excluded from CI",
]

[tool.coverage.run]
source = ["src/conductor"]
omit = [
    "tests/*",
    "examples/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:"
]
